--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,6 +11,14 @@ body {
 footer {
   position: fixed;
   bottom: 10px;
-  left: 10px;
+  left: 15px;
   color: white;
+}
+
+#cog {
+  color: white;
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  font-size: 1.5em;
 }
