--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,9 +16,11 @@ footer {
 }
 
 #cog {
+  cursor: pointer;
   color: white;
+  font-size: 1.5em;
+
   position: fixed;
   top: 15px;
   right: 15px;
-  font-size: 1.5em;
 }
