--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,9 +3,19 @@
   silas styles
 */
 
+:root {
+  font-size: 16px;
+}
+
 body {
   background: rgb(20, 22, 29);
   position: relative;
+}
+
+@media (max-width: 768px) {
+  :root {
+    font-size: 10px;
+  }
 }
 
 footer {
@@ -18,7 +28,7 @@ footer {
 #cog {
   cursor: pointer;
   color: white;
-  font-size: 1.5em;
+  font-size: 1.5rem;
 
   position: fixed;
   top: 15px;
@@ -29,7 +39,7 @@ footer {
   color: #d922d2;
   display: inline-block;
   position: relative;
-  top: -1.1em;
+  top: -1.1rrem;
   width: 0px;
-  margin-top: 0.5em;
+  margin-top: 0.5rem;
 }
