--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,7 +39,7 @@ footer {
   color: #d922d2;
   display: inline-block;
   position: relative;
-  top: -1.1rrem;
+  top: -2.5rem;
   width: 0px;
   margin-top: 0.5rem;
 }
