--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,7 @@
 
 :root {
   font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
@@ -37,6 +38,15 @@ footer {
 
 .chord-line {
   color: #d922d2;
+  display: inline-block;
+  position: relative;
+  top: -2.5rem;
+  width: 0px;
+  margin-top: 0.5rem;
+}
+
+.next-chord-line {
+  color: #999;
   display: inline-block;
   position: relative;
   top: -2.5rem;
